@@ -6,7 +6,9 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Handle Unauthorized exceptions when rendered in context of unauthorized
+  objects. Can happen with standard_error_pages
+  [do3cc]
 
 
 2.3.1 (2012-07-26)
